[package]
name = "deno_typescript"
publish = false
version = "0.0.1"
repository = "https://github.com/ry/deno_typescript"
authors = ["Ryan Dahl <ry@tinyclouds.org>"]
edition = "2018"
build = "build.rs"

[dependencies]
deno = "0.15.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
