[package]
name = "deno_snapshot_example"
version = "0.1.0"
authors = ["Ryan Dahl <ry@tinyclouds.org>"]
edition = "2018"
publish = false

# Unfortunately we have no way of notifying rust via proc macros that we depend
# on bundle.js... NOT WORKING?
include = ["src/bundle.js"]

[dependencies]
deno_snapshot = { path = "../deno_snapshot" }
deno = "0.12.0"
